--- a/components/albums-api/build.gradle
+++ b/components/albums-api/build.gradle
@@ -2,13 +2,20 @@ apply from: "../../java.gradle"
 
 
 dependencies {
-    compile project(":components:movies-persistence")
+    compile project(":components:albums-persistence")
+    compile project(":components:albums")
     compile "org.springframework:spring-core:$springVersion"
     compile "org.springframework:spring-context:$springVersion"
 
     compile "org.springframework:spring-web:$springVersion"
 
 
+
     compile "javax.servlet:javax.servlet-api:3.1.0"
     compile "org.slf4j:slf4j-api:$slf4jVersion"
+    compile "commons-lang:commons-lang:2.4"
+
+
+
+
 }
