--- a/applications/album-service/src/main/resources/application.yml
+++ b/applications/album-service/src/main/resources/application.yml
@@ -3,7 +3,6 @@ server.port: 8081
 spring:
   jpa:
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
-
   datasource:
     url: jdbc:mysql://localhost:3306/albums?useSSL=false
     username: root
@@ -12,7 +11,6 @@ logging.level:
   root: WARN
   org.superbiz.moviefun: DEBUG
 
-s3:
-  accessKey: <access key id>
-  secretKey: <secret access key>
-  bucketName: <name of the bucket>
+security:
+  basic:
+    enabled: true
