--- a/applications/movie-fun-app/src/main/resources/application.yml
+++ b/applications/movie-fun-app/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   mvc.view:
     prefix: /WEB-INF/
     suffix: .jsp
+security:
+    basic:
+      enabled: true
 
 logging.level:
   root: WARN
