--- a/manifest.yml
+++ b/manifest.yml
@@ -3,18 +3,30 @@ memory: 1G
 instances: 1
 applications:
 - name: album-service
+  env:
+    GRANT_TYPE: client_credentials
   path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
+  routes:
+  - route: album-service-rao.apps.longs.pal.pivotal.io
   services:
   - album-database
   - moviefun-s3
 - name: movie-service
+  env:
+    GRANT_TYPE: client_credentials
   path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
+  routes:
+  - route: movie-service-rao.apps.longs.pal.pivotal.io
   services:
   - movie-database
 - name: movie-fun-app
   path: applications/movie-fun-app/build/libs/movie-fun-app-1.1.0-SNAPSHOT.war
+  routes:
+  - route: movie-fun-app-rao.apps.longs.pal.pivotal.io
   services:
   - moviefun-s3
+  - movie-fun-sso
   env:
-    ALBUMS_URL: http://album-service.cfapps-02.haas-66.pez.pivotal.io/albums
-    MOVIES_URL: http://movie-service.cfapps-02.haas-66.pez.pivotal.io/movies
+    GRANT_TYPE: authorization_code
+    ALBUMS_URL: https://album-service-rao.apps.longs.pal.pivotal.io/albums
+    MOVIES_URL: https://movie-service-rao.apps.longs.pal.pivotal.io/movies
