--- a/applications/album-service/src/main/resources/application.yml
+++ b/applications/album-service/src/main/resources/application.yml
@@ -12,7 +12,6 @@ logging.level:
   root: WARN
   org.superbiz.moviefun: DEBUG
 
-s3:
-  accessKey: <access key id>
-  secretKey: <secret access key>
-  bucketName: <name of the bucket>
+security:
+  basic:
+    enabled: false
