--- a/manifest.yml
+++ b/manifest.yml
@@ -1,20 +1,28 @@
 ---
 memory: 1G
 instances: 1
+services:
+- movie-fun-sso
 applications:
 - name: album-service
   path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
+  env:
+    GRANT_TYPE: client_credentials
   services:
   - album-database
   - moviefun-s3
 - name: movie-service
   path: applications/movie-service/build/libs/movie-service-1.1.0-SNAPSHOT.jar
+  env:
+    GRANT_TYPE: client_credentials
   services:
   - movie-database
 - name: movie-fun-app
   path: applications/movie-fun-app/build/libs/movie-fun-app-1.1.0-SNAPSHOT.war
+  env:
+    GRANT_TYPE: authorization_code
   services:
   - moviefun-s3
   env:
-    ALBUMS_URL: http://album-service.cfapps-02.haas-66.pez.pivotal.io/albums
-    MOVIES_URL: http://movie-service.cfapps-02.haas-66.pez.pivotal.io/movies
+    ALBUMS_URL: https://album-service-pg.apps.longs.pal.pivotal.io/albums
+    MOVIES_URL: https://movie-service-pg.apps.longs.pal.pivotal.io/movies
