--- a/manifest.yml
+++ b/manifest.yml
@@ -4,6 +4,7 @@ instances: 1
 services:
 - movie-fun-sso
 - movie-fun-registry
+- movie-fun-config
 applications:
 - name: album-service
   path: applications/album-service/build/libs/album-service-1.1.0-SNAPSHOT.jar
