--- a/applications/movie-fun-app/build.gradle
+++ b/applications/movie-fun-app/build.gradle
@@ -27,7 +27,12 @@ dependencies {
     compile "io.pivotal.spring.cloud:spring-cloud-sso-connector:$springCloudSsoVersion"
     compile "io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry"
     compile "io.pivotal.spring.cloud:spring-cloud-services-starter-config-client"
+    compile "io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker"
 
+    /*compile('io.pivotal.spring.cloud:spring-cloud-services-starter-circuit-breaker') {
+        exclude group: 'org.springframework.cloud', module: 'spring-cloud-starter-stream-rabbit'
+    }
+*/
 
     compile "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.7.0"
     compile "taglibs:standard:1.1.2"
