--- a/components/movie-fun-api/build.gradle
+++ b/components/movie-fun-api/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(":components:blobstore")
 
     compile "org.springframework:spring-web:$springVersion"
+    compile "com.netflix.hystrix:hystrix-javanica:1.5.6"
 
     compile "javax.servlet:javax.servlet-api:3.1.0"
     compile "org.slf4j:slf4j-api:$slf4jVersion"
